Set ingredients
Set ingredients on a recipe, it completely overwrites the og ingredients
